# ptz-camera

./: .gitattributes  .gitignore  LICENSE  README.md  Run_DeepSORT.py  dvc.yaml  params.yaml  pyproject.toml  test_deepsort.py
3d/v2/: bottom.m3d  cap.m3d  cooler.m3d  fastener.m3d  logo.m3d  master_gear.m3d  name.m3d  ports.m3d  slave_gear.m3d  vertical_arm.m3d
3d/v2/stl/: bottom.stl  cap.stl  cooler.stl  fastener.stl  logo.stl  master_gear.stl  name.stl  ports.stl  slave_gear.stl  vertical_arm.stl
models/: MobileNetV2_modified.onnx
notebooks/: get_resnet18_imagenet_weights.ipynb
notebooks/data_manipulation/: miap_fiftyone_manipulations.ipynb
res/: ptz-camera.scxml
src/client/: CMakeLists.txt
src/client/qml/: ConnectionScreen.qml  ControlScreen.qml  RecordButton.qml  ServerListView.qml  main.qml
src/client/src/: availableservermodel.cpp  availableservermodel.h  client.cpp  client.h  main.cpp  trackingobjectmodel.cpp  trackingobjectmodel.h
src/control/: CMakeLists.txt  config.ini  main.py
src/control/qml/: CameraSelect.qml  Controls.qml  MountSelect.qml  main.qml
src/control/src/: arduinocommand.cpp  arduinocommand.h  camerawrapper.cpp  camerawrapper.h  deepsort.cpp  deepsort.h  hotspot.cpp  hotspot.h  hungarian.cpp  hungarian.h  mail.cpp  main.cpp  mountdriver.cpp  mountdriver.h  processor.cpp  processor.h  server.cpp  server.h  settingsconductor.h  streamer.cpp  streamer.h  targetingobject.cpp  targetingobject.h  trackingobject.cpp  trackingobject.h  utils.h
src/control/src/nets/: objectdetectionnet.h  yolo5.cpp  yolo5.h
src/control/tests/: CMakeLists.txt  testhungarian.cpp  testhungarian.h
src/control/tests/hungarian/: CMakeLists.txt  testhungarian.cpp  testhungarian.h
src/control/tests/trackingobject/: CMakeLists.txt  testtrackingobject.cpp  testtrackingobject.h
src/data/: preprocess_mobilenet_dataset.py  preprocess_yolo_dataset.py
src/data/utils/: MIAPDetection.py  mean_std_calculation.py
src/firmware/: ptz.ino
src/firmware/ptz/: ptz.ino
src/learning/imagenet_training/: train.py
src/learning/mobilenet_training/: train.py
src/learning/utils/: coco_eval.py  engine.py
src/learning/validation_and_testing/: Repka_CV_test.py  models_speed_test.py  validate_models.py
src/shared/: common_defs.h
