[tool.poetry]
name = "ptz-camera"
version = "0.1.0"
description = ""
authors = ["Alex Laletin <alex.klark.laletin@yandex.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^2.3.1+cu118", source = "torch_cu118" }
torchvision = { version = "^0.18.1+cu118", source = "torch_cu118" }
ultralytics = "^8.2.31"
dvc = "^3.51.2"
fiftyone = "^0.24.1"
jupyter = "^1.0.0"
pycocotools = "^2.0.7"
onnx = "^1.16.1"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
